<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_reg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img4"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.7"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/card_view"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="48sp"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:id="@+id/card_view"
        android:layout_marginBottom="-20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_reg"
                android:alpha="0.7"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:id="@+id/tv_uname_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_uname_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/done_icon"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/tv_password_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPassword"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/password_icon"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/tv_repassword_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPasswordRe"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_repassword_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/password_icon"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:onClick="RegFunction"
                />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HaveAcc"
                    android:alpha="0.7"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:alpha="0.7"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:onClick="ToMainActivity"
                    />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>







</RelativeLayout>