<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Creategroup"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.3"
        />
    <LinearLayout
        android:id="@+id/main_crt_ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="48sp"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crtGroup"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
            android:alpha="0.7"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_crt_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/main_crt_ll1"
        android:padding="28dp">
        <TextView
            android:id="@+id/tv_gname_crt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groupName"
            android:alpha="0.7"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/et_gname_crt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/done_icon"
            android:inputType="text"
            android:textColor="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <Button
            android:id="@+id/btn_crt_group"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/crtGroup"
            android:onClick="crtGpfun"
            />


    </LinearLayout>

</RelativeLayout>