<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Addservices">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.7"
        />


    <LinearLayout
        android:id="@+id/ll_addS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="48sp"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_addS"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:id="@+id/card_view"
        android:layout_marginBottom="-20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:id="@+id/tv_gname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SERVICE"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please enter service detiles"
                android:alpha="0.7"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/tv_sname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Service Name"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_sname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/tv_suname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_suname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/tv_spassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPassword"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_spassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_addservice"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="ADD"
                android:onClick="AddService"
                />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>